--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green">#9DFC44</color>
+    <color name="red">#FC5044</color>
+    <color name="cyan">#44FCBF</color>
 </resources>
