Added the Happy birthday page (birthday_page.xml)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="green">#9DFC44</color>
     <color name="red">#FC5044</color>
     <color name="cyan">#44FCBF</color>
+    <color name="pink">#FF30CB</color>
 </resources>
