--- a/app/src/main/res/layout/birthday_page.xml
+++ b/app/src/main/res/layout/birthday_page.xml
@@ -18,15 +18,17 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="38dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="159dp"
+        android:layout_marginEnd="10dp"
         android:text="@string/happy_birthday_text"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="50sp"
+        android:textSize="40sp"
         android:textStyle="bold|italic"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
