Room DB - without view model

--- a/app/src/main/res/layout/activity_db.xml
+++ b/app/src/main/res/layout/activity_db.xml
@@ -36,5 +36,15 @@
         app:layout_constraintBaseline_toBaselineOf="@+id/btnDbInsert"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <Button
+        android:id="@+id/btnInc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="34dp"
+        android:text="increment"
+        app:layout_constraintStart_toStartOf="@+id/btnDbInsert"
+        app:layout_constraintTop_toBottomOf="@+id/btnDbInsert" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
